--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^21.1.0",
+    "@angular/animations": "^20.3.15",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "chart.js": "^4.5.1",
+    "pchart": "^1.0.4",
     "primeicons": "^7.0.0",
-    "primeng": "^20.0.0",
+    "primeng": "^20.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
